<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center_horizontal">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="170dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="40"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_enviar"
        android:text="@string/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btActCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btActCadastro"/>

</LinearLayout>
