<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp" />
    <EditText
        android:id="@+id/etNomeTecnico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/nomeTecnico"/>

    <EditText
        android:id="@+id/etNomeEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomeEmpresa"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etNomeFuncao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/funcao"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btCadastrarTecnico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCadastrarTecnico"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvTecnicoCadastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>
        <TextView
            android:id="@+id/tvMensagemSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTecnicoCadastrado"/>
        <TextView
            android:id="@+id/mostrarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMensagemSenha"
            android:textAlignment="center"
            android:ems="40"
            android:textColor="@color/colorPrimary"/>

    </RelativeLayout>

</LinearLayout>
